# cmake_udemy

2_CMake/01_HelloWorld/: CMakeLists.txt
2_CMake/02_BasicProject/: CMakeLists.txt  my_lib.cpp
2_CMake/03_IntermediateProject/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/03_IntermediateProject_2/app/: CMakeLists.txt
2_CMake/03_IntermediateProject_2/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/03_IntermediateProject_3/src/my_lib/src/: my_lib.cpp
2_CMake/04_VariablesOptions/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/05_ConfigureFile/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/06_SourcesAndHeaders/app/: CMakeLists.txt
2_CMake/06_SourcesAndHeaders/src/my_lib/: my_lib.cpp
2_CMake/07_ExternalGit/app/: CMakeLists.txt
2_CMake/07_ExternalGit/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/08_FetchContent/app/: CMakeLists.txt
2_CMake/08_FetchContent/src/my_lib/: CMakeLists.txt  my_lib.cpp
